--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ document.onreadystatechange = function () {
     <body>
         <!-- <h1 align="center"><p><img src="esp-logo.png" width="42" height="42" style="vertical-align:middle"></img> ESP Tool</p></h1> -->
         <h1 style="font-size:40px;text-align:center;">ESP Web Flasher v2</h1>
-        <h5 align="center">Open with Chrome, Support ESP32-s2 & 8266, Install ESP driver first (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">Download</a>)</h4>
+        <h5 align="center">Open with Chrome/Edge, Support ESP32-s2 & 8266, Install ESP driver first (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">Download</a>)</h4>
         <div id="safariErr" style="display:none"><p align="center" style="color:red">This tool is not supported on Safari browser!</p>
         </div>
         <div align="center" style="display:none">
