--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ document.onreadystatechange = function () {
     <body>
         <!-- <h1 align="center"><p><img src="esp-logo.png" width="42" height="42" style="vertical-align:middle"></img> ESP Tool</p></h1> -->
         <h1 style="font-size:40px;text-align:center;">ESP Web Flasher v2</h1>
-        <h5 align="center">Open with Chrome/Edge, Support ESP32-s2 & 8266, Install ESP driver first (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">Download</a>)</h4>
+        <h5 align="center">Open with Chrome/Edge, Support ESP32-s2 & 8266, Install ESP driver first (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">Download</a>), <a target="_blank" href="https://psgo.github.io/esptool/">ESP Web Flasher v1</a></h4>
         <div id="safariErr" style="display:none"><p align="center" style="color:red">This tool is not supported on Safari browser!</p>
         </div>
         <div align="center" style="display:none">
@@ -62,7 +62,6 @@ document.onreadystatechange = function () {
                 <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" />
                 <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
 				<input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
-				<input class="btn btn-warning btn-sm" type="button" id="addFile" value="Add more files" />
                 <br>
 
                 <div class="alert alert-danger alert-dismissible" id="alertDiv" style="display:none; margin-top:10px">
