--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ document.onreadystatechange = function () {
                     </table>
                     <!-- <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File" /> -->
 					<input class="btn btn-info btn-sm" type="button" id="programButton" value="Start Flashing" />
-                    <input class="btn btn-danger btn-sm" type="button" id="addFile" value="Add more files" />
+                    <input style="display:none" class="btn btn-danger btn-sm" type="button" id="addFile" value="Add more files" />
                 </div>
                 <output id="list"></output>
                 <hr/>
