--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@ document.onreadystatechange = function () {
                 <br><br>
 
                 <input class="btn btn-info btn-sm" type="button" id="connectButton" value="Connect" />
-                <!-- <input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" /> -->
                 <input class="btn btn-warning btn-sm" type="button" id="disconnectButton" value="Disconnect" />
                 <input class="btn btn-danger btn-sm" type="button" id="eraseButton" value="Erase Flash" />
 				<input class="btn btn-info btn-sm" type="button" id="copyTraceButton" value="Copy Trace" />
@@ -83,7 +82,7 @@ document.onreadystatechange = function () {
                     </table>
                     <!-- <input class="btn btn-info btn-sm" type="button" id="addFile" value="Add File" /> -->
 					<input class="btn btn-info btn-sm" type="button" id="programButton" value="Start Flashing" />
-                    <input style="display:none" class="btn btn-danger btn-sm" type="button" id="addFile" value="Add more files" />
+                    <input class="btn btn-danger btn-sm" type="button" id="addFile" value="Add more files" />
                 </div>
                 <output id="list"></output>
                 <hr/>
