--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
         <title>ESP Web Flasher v2 - PSGO</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
-        <link
-            href="https://fonts.googleapis.com/css?family=Orbitron"
-            rel="stylesheet"
-        />
-        <!-- <link rel="icon" href="../assets/favicon.ico" /> -->
+        <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"/>
          <script src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.min.js"></script>
          <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.js"></script>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script>
+            // Detect user language and redirect to Chinese page if necessary
+            document.addEventListener("DOMContentLoaded", function () {
+                var userLang = navigator.language || navigator.userLanguage; // Get the browser language
+                if (userLang.includes("zh")) {
+                    window.location.href = "index_zh.html"; // Redirect to Chinese page if the language is Chinese
+                }
+
+                // Language switch functionality
+                $('#switchToChinese').click(function () {
+                    window.location.href = "index_zh.html"; // Switch to Chinese page when clicked
+                });
+            });
+        </script>
 <script>
-document.onreadystatechange = function () {
-   if (document.readyState == "complete") {
-        //document.body.style.display = "block";
-	    $('body').show(1000);
-	    $('#loading').hide(500);//关闭动画
-   }else{
-        //document.body.style.display = "none";
-	    $('body').hide(500);
-	    loading(1);//加载动画
-   };
+window.onload = function() {
+    document.body.style.display = "block"; // 页面加载完成后显示页面
 };
+
+document.body.style.display = "none"; // 页面初始时隐藏
 </script>
     </head>
     <body>
@@ -105,6 +109,9 @@ document.onreadystatechange = function () {
             </div>
             <div id="terminal"></div>
         </div>
+		
+		<a href="#" id="switchToChinese" style="position: absolute; top: 20px; right: 20px;">切换到中文</a>
+		
         <script src="index.js" type="module"></script>
         <script>
             // Safari 3.0+ "[object HTMLElementConstructor]"
