--- a/index_zh.html
+++ b/index_zh.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>ESP 在线刷机 v2 - PSGO</title>
+        <title>ESP在线刷机工具 v2 - PSGO</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
         <link
@@ -24,8 +24,8 @@ document.body.style.display = "none"; // 页面初始时隐藏
     </head>
     <body>
         <!-- <h1 align="center"><p><img src="esp-logo.png" width="42" height="42" style="vertical-align:middle"></img> ESP Tool</p></h1> -->
-        <h1 style="font-size:40px;text-align:center;">ESP Web Flasher v2</h1>
-        <h5 align="center">使用Chrome/Edge打开本页、支持ESP32-s2 & 8266、先安装ESP驱动 (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">下载</a>)、<a target="_blank" href="https://psgo.github.io/esptool/">ESP Web Flasher v1</a></h4>
+        <h1 style="font-size:40px;text-align:center;">ESP在线刷机工具 v2</h1>
+        <h5 align="center">请使用Chrome/Edge浏览器、支持ESP32-s2和8266等、ESP驱动 (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">下载</a>)、<a target="_blank" href="https://psgo.github.io/esptool/">ESP Web Flasher v1</a></h4>
         <div id="safariErr" style="display:none"><p align="center" style="color:red">不支持Safari浏览器!</p>
         </div>
         <div align="center" style="display:none">
