--- a/index_zh.html
+++ b/index_zh.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <title>ESP在线刷机工具 v2 - PSGO</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@4.19.0/css/xterm.css">
-        <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"/>
-         <script src="https://cdn.jsdelivr.net/npm/xterm@4.19.0/lib/xterm.min.js"></script>
-         <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.js"></script>
-         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/xterm.css">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"/> -->
+         <script src="css/xterm.min.js"></script>
+         <script src="css/crypto-js.js"></script>
+         <script src="css/jquery.min.js"></script>
+         <script src="css/bootstrap.min.js"></script>
 <script>
 window.onload = function() {
     setTimeout(function() {
