--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <script>
             // Detect user language and redirect to Chinese page if necessary
             document.addEventListener("DOMContentLoaded", function () {
-                <!-- var userLang = navigator.language || navigator.userLanguage; // Get the browser language -->
-                <!-- if (userLang.includes("zh")) { -->
-                    <!-- window.location.href = "index_zh.html"; // Redirect to Chinese page if the language is Chinese -->
-                <!-- } -->
+                var userLang = navigator.language || navigator.userLanguage; // Get the browser language
+                if (userLang.includes("zh")) {
+                    window.location.href = "index_zh.html"; // Redirect to Chinese page if the language is Chinese
+                }
 
                 // Language switch functionality
                 $('#switchToChinese').click(function () {
