--- a/index_zh.html
+++ b/index_zh.html
@@ -10,15 +10,15 @@
          <script src="css/crypto-js.js"></script>
          <script src="css/jquery.min.js"></script>
          <script src="css/bootstrap.min.js"></script>
-<script>
-window.onload = function() {
-    setTimeout(function() {
-        document.body.style.display = "block"; // 页面加载完成后2秒显示页面
-    }, 2000); 
-};
+<!-- <script> -->
+<!-- window.onload = function() { -->
+    <!-- setTimeout(function() { -->
+        <!-- document.body.style.display = "block"; // 页面加载完成后2秒显示页面 -->
+    <!-- }, 2000);  -->
+<!-- }; -->
 
-document.body.style.display = "none"; // 页面初始时隐藏
-</script>
+<!-- document.body.style.display = "none"; // 页面初始时隐藏 -->
+<!-- </script> -->
     </head>
     <body>
         <!-- <h1 align="center"><p><img src="esp-logo.png" width="42" height="42" style="vertical-align:middle"></img> ESP Tool</p></h1> -->
