--- a/index_zh.html
+++ b/index_zh.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <!-- <h1 align="center"><p><img src="esp-logo.png" width="42" height="42" style="vertical-align:middle"></img> ESP Tool</p></h1> -->
-        <h1 style="font-size:40px;text-align:center;">ESP在线刷机工具 v2</h1>
+        <h1 style="font-size:40px;text-align:center;">ESP网页刷机工具 v2</h1>
         <h5 align="center">请使用Chrome/Edge浏览器、支持ESP32-s2和8266等、ESP驱动 (<a target="_blank" href="https://psgo.lanzoub.com/iLLi91wwvu4b">下载</a>)、<a target="_blank" href="https://psgo.github.io/esptool/">ESP Web Flasher v1</a></h4>
         <div id="safariErr" style="display:none"><p align="center" style="color:red">不支持Safari浏览器!</p>
         </div>
@@ -37,7 +37,7 @@
         <div class="container" id="main">
             <hr/>
             <div id="program">
-                <h3>先用数据线连接ESP和电脑</h3>
+                <h3>准备好Bin文件，然后用数据线连接ESP和电脑，点"连接"按钮</h3>
                 <label for="baudrates" id="lblBaudrate">传输速率 (默认: 921600):</label>
                 <label style="display:none" id="lblConnTo">已连接到ESP: </label>
                 <select name="baudrates" id="baudrates">
